--- a/home.html
+++ b/home.html
@@ -308,23 +308,7 @@
             }
         },
         created() {
-            const token = Cookies.get("LY_TOKEN");
-            if (token) {
-                // 有token，曾经登录过，查询用户信息
-                leyou.http.get("/user/" + token)
-                    .then(resp => {
-                        this.user = resp.data;
-                        // 查询订单信息
-                        this.loadOrder();
-                    })
-                    .catch(() => {
-                        // 去登录
-                        this.gotoLogin();
-                    });
-            } else {
-                // 去登录
-                this.gotoLogin();
-            }
+            leyou.http.get("/auth/verify"+)
         },
         methods: {
             logout() {
